tests/fixtures/compile-errors/instantiation-too-many-type-parameters/compile_error.ts
export default "even though it only accepts";
